# ag2

./: .pre-commit-config.yaml  MAINTAINERS.md  bert_example.txt  pyproject.toml  setup.py  wiki_edits_example.txt
autogen/: _pydantic.py  code_utils.py  function_utils.py  graph_utils.py  math_utils.py  retrieve_utils.py  runtime_logging.py  token_count_utils.py
autogen/agentchat/: __init__.py  agent.py  assistant_agent.py  chat.py  conversable_agent.py  groupchat.py  user_proxy_agent.py  utils.py
autogen/agentchat/contrib/: agent_builder.py  agent_optimizer.py  captainagent.py  gpt_assistant_agent.py  img_utils.py  llamaindex_conversable_agent.py  llava_agent.py  math_user_proxy_agent.py  multimodal_conversable_agent.py  qdrant_retrieve_user_proxy_agent.py  reasoning_agent.py  retrieve_user_proxy_agent.py  society_of_mind_agent.py  swarm_agent.py  text_analyzer_agent.py  tool_retriever.py
autogen/agentchat/realtime_agent/: function_observer.py  oai_realtime_client.py  realtime_agent.py  realtime_client.py  realtime_observer.py  twilio_audio_adapter.py  websocket_audio_adapter.py
autogen/agents/experimental/: __init__.py
autogen/cache/: abstract_cache_base.py  cache.py  cache_factory.py  cosmos_db_cache.py  disk_cache.py  in_memory_cache.py  redis_cache.py
autogen/coding/: base.py
autogen/coding/jupyter/: jupyter_code_executor.py
autogen/interop/: interoperability.py  interoperable.py  registry.py
autogen/interop/crewai/: crewai.py
autogen/interop/langchain/: langchain.py
autogen/interop/pydantic_ai/: pydantic_ai.py  pydantic_ai_tool.py
autogen/io/: base.py  console.py  websockets.py
autogen/logger/: base_logger.py  file_logger.py  sqlite_logger.py
autogen/oai/: anthropic.py  bedrock.py  cerebras.py  client.py  client_utils.py  cohere.py  completion.py  gemini.py  groq.py  mistral.py  ollama.py  openai_utils.py  together.py
autogen/tools/: function_utils.py  tool.py
notebook/: agentchat_dalle_and_gpt4v.ipynb  agentchat_function_call_async.ipynb  agentchat_groupchat_RAG.ipynb  agentchat_groupchat_customized.ipynb  agentchat_lmm_gpt-4v.ipynb  agentchat_lmm_llava.ipynb  agentchat_nestedchat_optiguide.ipynb  agentchat_realtime_swarm.ipynb  agentchat_stream.ipynb  agentchat_swarm.ipynb  agentchat_swarm_enhanced.ipynb  agentchat_swarm_graphrag_telemetry_trip_planner.ipynb  agentchat_swarm_graphrag_trip_planner.ipynb  agentchat_websockets.ipynb  agents_func_agent.ipynb  agents_reliable_function_agent.ipynb  async_human_input.ipynb  gpt_assistant_agent_function_call.ipynb  lats_search.ipynb  reliable.ipynb  reliable_basic_example.ipynb  reliable_google_search.ipynb  reliable_group_chat.ipynb  research_bench.py  tools_interoperability.ipynb
scripts/: lint-pre-commit.sh  lint.sh  pre-commit-license-check.py
test/: test_browser_utils.py  test_function_utils.py  test_logging.py  test_retrieve_utils.py
test/agentchat/: test_agent_file_logging.py  test_agent_logging.py  test_agent_usage.py  test_assistant_agent.py  test_async.py  test_async_chats.py  test_async_get_human_input.py  test_cache_agent.py  test_chats.py  test_conversable_agent.py  test_function_call.py  test_function_call_groupchat.py  test_groupchat.py  test_human_input.py  test_math_user_proxy_agent.py  test_nested.py  test_structured_output.py  test_tool_calls.py
test/agentchat/contrib/: test_agent_builder.py  test_captainagent.py  test_gpt_assistant.py  test_llamaindex_conversable_agent.py  test_lmm.py  test_reasoning_agent.py  test_society_of_mind_agent.py  test_swarm.py  test_web_surfer.py
test/agentchat/extensions/: tsp.py  tsp_api.py
test/agentchat/realtime_agent/: realtime_test_utils.py  test_e2e.py  test_oai_realtime_client.py
test/interop/crewai/: test_crewai.py
test/interop/langchain/: test_langchain.py
test/interop/pydantic_ai/: test_pydantic_ai.py  test_pydantic_ai_tool.py
test/io/: test_websockets.py
test/oai/: test_bedrock.py  test_cerebras.py  test_client.py  test_client_stream.py  test_client_utils.py  test_gemini.py  test_groq.py  test_mistral.py  test_ollama.py  test_together.py  test_utils.py
website/: process_api_reference.py  process_notebooks.py
website/blog/2024-11-17-Swarm/: index.mdx
website/blog/2024-12-20-RealtimeAgent/: index.mdx
(+103 files in other folders)
